fix: Updated documentation and fixed report amount from int to double

--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -215,7 +215,7 @@ Il sistema invia delle notifiche ai seguenti attori:
 \begin{itemize}
   \item \textbf{Al paziente}: per ricordargli di inserire i dati giornalieri
   \item \textbf{Al medico di riferimento del paziente}: per avvisare che il paziente  
-    non ha seguito per più di tre giorni consecutivi le prescrizioni.
+    non ha fatto per più di tre giorni consecutivi una rilevazione.
   \item \textbf{A tutti i medici}: per segnalare i pazienti che registrano
     livelli di glicemia sopra le soglie indicate.
 \end{itemize}
